--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_shop">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="uk.co.jakelee.pixelbookshop.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_shop"
+        android:name="uk.co.jakelee.pixelbookshop.ui.shop.ShopFragment"
+        android:label="@string/title_shop"
+        tools:layout="@layout/fragment_shop" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="uk.co.jakelee.pixelbookshop.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_stock"
+        android:name="uk.co.jakelee.pixelbookshop.ui.stock.StockFragment"
+        android:label="@string/title_stock"
+        tools:layout="@layout/fragment_stock" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="uk.co.jakelee.pixelbookshop.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_customise"
+        android:name="uk.co.jakelee.pixelbookshop.ui.customise.CustomiseFragment"
+        android:label="@string/title_customise"
+        tools:layout="@layout/fragment_customise" />
+
+    <fragment
+        android:id="@+id/navigation_travel"
+        android:name="uk.co.jakelee.pixelbookshop.ui.travel.TravelFragment"
+        android:label="@string/title_travel"
+        tools:layout="@layout/fragment_travel" />
+
+    <fragment
+        android:id="@+id/navigation_settings"
+        android:name="uk.co.jakelee.pixelbookshop.ui.settings.SettingsFragment"
+        android:label="@string/title_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
