Adds basic level display, stock display

--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -7,28 +7,39 @@
     android:padding="8dp"
     android:background="@drawable/ui_background">
 
+    <ProgressBar
+        android:id="@+id/text_level_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="50dp"
+        android:layout_height="0dp"
+        android:indeterminate="false"
+        android:progressDrawable="@drawable/progressbar_vertical"
+        android:progress="75"
+        android:layout_margin="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/text_time"/>
     <TextView
         android:id="@+id/text_level"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
         android:textSize="24sp"
-        android:layout_margin="2dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/text_xp"
-        android:background="@drawable/ui_element"
+        app:layout_constraintStart_toStartOf="@id/text_level_progress"
+        app:layout_constraintTop_toTopOf="@id/text_level_progress"
+        app:layout_constraintBottom_toBottomOf="@id/text_level_progress"
+        app:layout_constraintEnd_toEndOf="@id/text_level_progress"
         tools:text="16"/>
 
     <TextView
-        android:id="@+id/text_xp"
+        android:id="@+id/text_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="18sp"
         android:layout_margin="2dp"
-        app:layout_constraintStart_toEndOf="@id/text_level"
+        app:layout_constraintStart_toEndOf="@id/text_level_progress"
         app:layout_constraintEnd_toStartOf="@id/text_coins"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/text_stock"
@@ -41,9 +52,9 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@id/text_xp"
-        app:layout_constraintTop_toBottomOf="@id/text_xp"
-        app:layout_constraintEnd_toEndOf="@id/text_xp"
+        app:layout_constraintStart_toStartOf="@id/text_time"
+        app:layout_constraintTop_toBottomOf="@id/text_time"
+        app:layout_constraintEnd_toEndOf="@id/text_time"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/ui_element"
         tools:text="100 books"/>
@@ -55,7 +66,7 @@
         android:gravity="center"
         android:textSize="24sp"
         android:layout_margin="2dp"
-        app:layout_constraintStart_toEndOf="@id/text_xp"
+        app:layout_constraintStart_toEndOf="@id/text_time"
         app:layout_constraintEnd_toStartOf="@id/text_notifications"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
