--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="8dp"
+    android:padding="6dp"
     android:background="@drawable/ui_background">
 
     <ProgressBar
@@ -13,11 +13,12 @@
         android:layout_width="50dp"
         android:layout_height="0dp"
         android:indeterminate="false"
+        android:layout_marginRight="2dp"
         android:progressDrawable="@drawable/progressbar_vertical"
-        android:layout_margin="2dp"
+        tools:progress="50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/text_stock_progress"
         app:layout_constraintEnd_toStartOf="@id/text_time"/>
     <TextView
         android:id="@+id/text_level"
@@ -27,32 +28,45 @@
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@id/text_level_progress"
         app:layout_constraintTop_toTopOf="@id/text_level_progress"
-        app:layout_constraintBottom_toBottomOf="@id/text_level_progress"
+        app:layout_constraintBottom_toBottomOf="@id/text_stock_progress"
         app:layout_constraintEnd_toEndOf="@id/text_level_progress"
         tools:text="16"/>
 
+    <ProgressBar
+        android:id="@+id/text_time_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:indeterminate="false"
+        android:progressDrawable="@drawable/progressbar_horizontal"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
+        tools:progress="50"
+        app:layout_constraintBottom_toTopOf="@id/text_stock_progress"
+        app:layout_constraintEnd_toStartOf="@id/text_coins_progress"
+        app:layout_constraintStart_toStartOf="@id/text_time"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/text_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:background="@drawable/ui_element"
         android:gravity="center"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/text_stock_progress"
+        app:layout_constraintBottom_toBottomOf="@id/text_time_progress"
         app:layout_constraintEnd_toStartOf="@id/text_coins_progress"
         app:layout_constraintStart_toEndOf="@id/text_level_progress"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="13457xp" />
+        tools:text="Day 1: 4pm" />
 
     <ProgressBar
         android:id="@+id/text_stock_progress"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        android:layout_margin="2dp"
         android:indeterminate="false"
-        android:progressDrawable="@drawable/progressbar_vertical"
+        android:progressDrawable="@drawable/progressbar_horizontal"
+        android:layout_marginEnd="2dp"
+        tools:progress="50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/text_coins_progress"
         app:layout_constraintStart_toStartOf="@id/text_time"
@@ -76,11 +90,12 @@
         android:layout_height="0dp"
         android:indeterminate="false"
         android:progressDrawable="@drawable/progressbar_vertical"
-        android:layout_margin="2dp"
+        android:layout_marginEnd="2dp"
+        tools:progress="50"
         app:layout_constraintStart_toEndOf="@id/text_time"
-        app:layout_constraintEnd_toStartOf="@id/text_notifications"
+        app:layout_constraintEnd_toStartOf="@id/text_notifications_progress"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="@id/text_stock_progress"/>
     <TextView
         android:id="@+id/text_coins"
         android:layout_width="0dp"
@@ -93,17 +108,28 @@
         app:layout_constraintEnd_toEndOf="@id/text_coins_progress"
         tools:text="16"/>
 
-    <TextView
-        android:id="@+id/text_notifications"
-        android:layout_width="wrap_content"
+    <ProgressBar
+        android:id="@+id/text_notifications_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="25dp"
         android:layout_height="0dp"
-        android:gravity="center"
-        android:textSize="24sp"
-        android:layout_margin="2dp"
+        android:indeterminate="false"
+        android:progressDrawable="@drawable/progressbar_vertical"
+        android:layout_marginEnd="2dp"
+        tools:progress="50"
         app:layout_constraintStart_toEndOf="@id/text_coins"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/ui_element"
+        app:layout_constraintBottom_toBottomOf="@id/text_coins_progress"/>
+    <TextView
+        android:id="@+id/text_notifications"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@id/text_notifications_progress"
+        app:layout_constraintEnd_toEndOf="@id/text_notifications_progress"
+        app:layout_constraintTop_toTopOf="@id/text_notifications_progress"
+        app:layout_constraintBottom_toBottomOf="@id/text_notifications_progress"
         android:text="!"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
