--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -41,7 +41,8 @@
         android:progressDrawable="@drawable/progressbar_horizontal"
         android:layout_marginEnd="2dp"
         android:layout_marginBottom="2dp"
-        tools:progress="50"
+        tools:progress="16"
+        android:max="24"
         app:layout_constraintBottom_toTopOf="@id/text_stock_progress"
         app:layout_constraintEnd_toStartOf="@id/text_coins_progress"
         app:layout_constraintStart_toStartOf="@id/text_time"
