Adds custom font, hides nav bar, adds framework for upgrading

--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical|horizontal"
+        android:background="@color/black"
         app:alignment="center"
         app:animationDuration="280"
         app:flingEnabled="true"
